# teaDetector

./: .gitignore  README.md  eval_config.py  eval_deimv2_tealeaves.py  eval_onnx_detector.py  eval_tea.py  export_onnx.py  merge_tealeaves_categories.py  onnx_eval_config.py  plot_eval_charts.py  plot_train_curves.py  plot_training_curves.py  requirements.txt  split_tealeaves_dataset.py  train_deimv2_s_tealeaves.py  train_tea.py
configs/: __init__.py  augmentation.py  eval.py  export_onnx.py  preprocess.py  train.py
deploy_cpp/: CMakeLists.txt
deploy_cpp/example/: main.cpp
deploy_cpp/include/tea_deploy/: config.h  detector.h  postprocess.h  preprocess.h  tea_deploy.hpp
deploy_cpp/src/: config.cpp  detector.cpp  postprocess.cpp  preprocess.cpp
utils/: __init__.py  common.py  eval.py  onnx.py  postprocess.py  preprocess.py  train.py
